# ref-man-py

./: .gitignore  Changelog.org  README.org  pyproject.toml  requirements.txt  setup.py
ref_man/: semantic_scholar.py
ref_man_py/: __main__.py  arxiv.py  cache.py  config.py  cvf.py  data.py  files_cache.py  filters.py  headers_default.json  log.py  pdf_cache.py  semantic_scholar.py  semantic_search.py  server.py  service.py  ss_default.json  util.py
tests/: conftest.py  fixtures.py  test_routes.py  test_s2_api.py  test_s2_service.py  test_service.py  test_service_init.py  test_service_s2.py  test_ss_cache.py
