[tool.poetry]
name = "ref-man"
version = "0.3.9"
description = """ref-man python module.

See https://github.com/akshaybadola/ref-man for the emacs library.

Network requests and xml parsing can be annoying in emacs, so ref-man uses
a separate python process for efficient (and sometimes parallel) fetching
of network requests.
"""
authors = ["Akshay <akshay.badola.cs@gmail.com>"]
license = "GPL-3"
readme = "README.org"
homepage = "https://github.com/akshaybadola/common-pyutil"
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    'Programming Language :: Python :: 3.6',
    'Programming Language :: Python :: 3.7',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    "Natural Language :: English",
    "Topic :: Education",
    "Topic :: Scientific/Engineering",
    "Topic :: Text Editors :: Emacs",
]
keywords = ['emacs', 'semanticscholar', 'bibliography']

[tool.poetry.dependencies]
python = "^3.7"
requests = "^2.26.0"
flask = "^1.1.2"
beautifulsoup4 = "^4.9.1"
psutil = "^5.8.0"
PyYAML = "^5.4.1"
lxml = "^4.6.4"
common_pyutil = "^0.8.0"
tinydb = "^4.6.1"

[tool.poetry.dev-dependencies]
pytest = "^6.2.4"

[tool.poetry.scripts]
test = "pytest:main"
ref_man = "ref_man.__main__:main"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
